{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 17,
  "lineage": "bfd92e54-2515-2400-2605-4d4fc2626cb9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "inst1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05bfbece1ed5beb54",
            "arn": "arn:aws:ec2:us-east-2:692591552026:instance/i-0ea2e08c47cf7b5f6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ea2e08c47cf7b5f6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fc7546152ad8cc7d",
            "private_dns": "ip-10-0-19-27.us-east-2.compute.internal",
            "private_ip": "10.0.19.27",
            "public_ip": "18.222.114.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00e2f933ac465d889",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-018dfd34de1bad7b8",
            "tags": {
              "Name": "charinst"
            },
            "tags_all": {
              "Name": "charinst"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05ea82650b4ae4c94"
            ]
          },
          "dependencies": [
            "aws_security_group.sg1",
            "aws_subnet.subnet1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "inst2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05bfbece1ed5beb54",
            "arn": "arn:aws:ec2:us-east-2:692591552026:instance/i-000fb2dcf2266ca95",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-000fb2dcf2266ca95",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0036551acbda602c7",
            "private_dns": "ip-10-0-121-245.us-east-2.compute.internal",
            "private_ip": "10.0.121.245",
            "public_ip": "18.117.77.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ec2a901b556df846",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-018dfd34de1bad7b8",
            "tags": {
              "Name": "kirinst"
            },
            "tags_all": {
              "Name": "kirinst"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05ea82650b4ae4c94"
            ]
          },
          "dependencies": [
            "aws_security_group.sg1",
            "aws_subnet.subnet1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:692591552026:internet-gateway/igw-0939e77356a3830fa",
            "id": "igw-0939e77356a3830fa",
            "owner_id": "692591552026",
            "tags": {
              "Name": "igw_load"
            },
            "tags_all": {
              "Name": "igw_load"
            },
            "vpc_id": "vpc-0610713b083fe97dd"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "application-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:692591552026:loadbalancer/app/aws-alb/eb5828780473626e",
            "arn_suffix": "app/aws-alb/eb5828780473626e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "aws-alb-445613715.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:692591552026:loadbalancer/app/aws-alb/eb5828780473626e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "aws-alb",
            "security_groups": [
              "sg-05ea82650b4ae4c94"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-018dfd34de1bad7b8"
              },
              {
                "subnet_id": "subnet-0d948cdef004e3c55"
              }
            ],
            "subnets": [
              "subnet-018dfd34de1bad7b8",
              "subnet-0d948cdef004e3c55"
            ],
            "tags": {
              "Name": "aws-alb"
            },
            "tags_all": {
              "Name": "aws-alb"
            },
            "vpc_id": "vpc-0610713b083fe97dd",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.sg1",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:692591552026:listener/app/aws-alb/eb5828780473626e/d31d880a18f0a0bf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:692591552026:targetgroup/targetload/a74205c73020d326",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:692591552026:listener/app/aws-alb/eb5828780473626e/d31d880a18f0a0bf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:692591552026:loadbalancer/app/aws-alb/eb5828780473626e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.application-lb",
            "aws_lb_target_group.tg",
            "aws_security_group.sg1",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:692591552026:targetgroup/targetload/a74205c73020d326",
            "arn_suffix": "targetgroup/targetload/a74205c73020d326",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:692591552026:targetgroup/targetload/a74205c73020d326",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "targetload",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0610713b083fe97dd"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tgattach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:692591552026:targetgroup/targetload/a74205c73020d326-20230209205832255700000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:692591552026:targetgroup/targetload/a74205c73020d326",
            "target_id": "i-0ea2e08c47cf7b5f6"
          },
          "dependencies": [
            "aws_instance.inst1",
            "aws_lb_target_group.tg",
            "aws_security_group.sg1",
            "aws_subnet.subnet1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tgattach2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:692591552026:targetgroup/targetload/a74205c73020d326-20230209205831436400000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:692591552026:targetgroup/targetload/a74205c73020d326",
            "target_id": "i-000fb2dcf2266ca95"
          },
          "dependencies": [
            "aws_instance.inst2",
            "aws_lb_target_group.tg",
            "aws_security_group.sg1",
            "aws_subnet.subnet1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0939e77356a3830fa",
            "id": "r-rtb-0c1baebe076330a421080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c1baebe076330a42",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw1",
            "aws_route_table.rt1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:692591552026:route-table/rtb-0c1baebe076330a42",
            "id": "rtb-0c1baebe076330a42",
            "owner_id": "692591552026",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt_load"
            },
            "tags_all": {
              "Name": "rt_load"
            },
            "timeouts": null,
            "vpc_id": "vpc-0610713b083fe97dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0338099a835b509",
            "route_table_id": "rtb-0c1baebe076330a42",
            "subnet_id": "subnet-018dfd34de1bad7b8"
          },
          "dependencies": [
            "aws_route_table.rt1",
            "aws_subnet.subnet1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028515d6245e99806",
            "route_table_id": "rtb-0c1baebe076330a42",
            "subnet_id": "subnet-0d948cdef004e3c55"
          },
          "dependencies": [
            "aws_route_table.rt1",
            "aws_subnet.subnet2",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:692591552026:security-group/sg-05ea82650b4ae4c94",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ea82650b4ae4c94",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "security_group",
            "name_prefix": "",
            "owner_id": "692591552026",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0610713b083fe97dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:692591552026:subnet/subnet-018dfd34de1bad7b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/17",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018dfd34de1bad7b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "692591552026",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "inst_subnet"
            },
            "tags_all": {
              "Name": "inst_subnet"
            },
            "vpc_id": "vpc-0610713b083fe97dd"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:692591552026:subnet/subnet-0d948cdef004e3c55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.128.0/17",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d948cdef004e3c55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "692591552026",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "load_subnet"
            },
            "tags_all": {
              "Name": "load_subnet"
            },
            "vpc_id": "vpc-0610713b083fe97dd"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:692591552026:vpc/vpc-0610713b083fe97dd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0062274c3b8d03c27",
            "default_route_table_id": "rtb-0ca4a32774425f5d4",
            "default_security_group_id": "sg-0fdb3a2195f23caef",
            "dhcp_options_id": "dopt-0717851b8c7ceaa17",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0610713b083fe97dd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ca4a32774425f5d4",
            "owner_id": "692591552026",
            "tags": {
              "Name": "vpc_load"
            },
            "tags_all": {
              "Name": "vpc_load"
            }
          }
        }
      ]
    }
  ]
}